# ChangeLog for vmware overlay
# Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
# $ Id: $

  28 Apr 2007; Mike Auty <ikelos@gentoo.org>:
  Version bump vmware server 1.0.3.44356.
  Fixed up vmware-workstation-6 ebuild to support native amd64.
  
  23 Apr 2007; Chris Gianelloni <wolf31o2@gentoo.org>
  app-emulation/vmware-workstation/files/vmware-workstation.rc:
  Added use hald to vmware-workstation init script due to bug #155450.

  22 Apr 2007; Mike Auty <ikelos@gentoo.org>:
  Version bumped vmware workstation 6.0.0.44426.
  Problems still existing with the beta:
  	Using gnome-2.18.0 seems to be missing a symbol.
	Using baselayout-2 the config trying to stop a stopped service fails.
	The application icons don't install/work properly.
  
  18 Apr 2007; Chris Gianelloni <wolf31o2@gentoo.org>
  app-emulation/vmware-workstation/vmware-workstation-6.0.0.36983.ebuild:
  Changed x11-libs/libsexymm to dev-cpp/libsexymm to match what's in the tree.
  Thanks to Bo Ørsted Andresen <bo.andresen@zlin.dk> for pointing it out.

  16 Apr 2007; Mike Auty <ikelos@gentoo.org>:
  Change the init script to start vmware-tools rather than vmware.
  
  15 Apr 2007; Mike Auty <ikelos@gentoo.org>:
  Version bump to 1.0.0.15 and remove patch Spanky added a while ago.

  11 Apr 2007; Mike Auty <ikelos@gentoo.org>:
  Fix up a naming issue when bash is called as sh for baselayout-2.
  
  09 Apr 2007; Mike Auty <ikelos@gentoo.org>:
  Fix up misconfiguration warning when stopping vmware-server
  whilst a server is still running.  Bug 173752.
  
  09 Apr 2007; Mike Auty <ikelos@gentoo.org>:
  Sync changes in the tree back into the overlay.
  
  09 Apr 2007; Mike Auty <ikelos@gentoo.org>:
  Fix up vmware-server-tools configs:
    Only build vmxnet vmdesched for server-tools
    Only build vmdesched if not on amd64
    Comment out all the module compilation problems
    Use modprobe to add the required modules

  01 Apr 2007; Mike Auty <ikelos@gentoo.org>: