@@ -8,6 +8,7 @@ RMD160 0d7e9ed13ebb3c73dd847e95fa95499296609e8c files/vmware-server-console.xml 
 SHA256 56aafee80ad705e8d832f8853c36d763d37b87d1cb132a41c50eb63085ae854d files/vmware-server-console.xml 1592
 DIST VMware-server-linux-client-1.0.1-29996.zip 23383483 RMD160 8f1e22c487066fc23c1457953da566e504477df2 SHA1 1fcd1d24f011c8b900c97ed53be5b556f7f13adf SHA256 bcb41c66c3016e54bba6399cf4b592161729eb5d88f65a3719daa227fb3d62a8
 DIST VMware-server-linux-client-1.0.2-39867.zip 23354900 RMD160 19a22469a45ea0fc466d67262c0726a2e159b1ad SHA1 260def73d6b29aa0d3544d121e4aa1563e18cbac SHA256 df7f90e5e0565ebc6c8baaed6bcd6f2d9716097d978d44b15f515b2cddaa8042
+DIST VMware-server-linux-client-1.0.3-44356.zip 23355388 RMD160 fed5884dc14c565ad9fb5bd089c951ea9adea79d SHA1 86703bfef17058a360bda0dc4c478d1bcb0fbad2 SHA256 613912cea96209654dfd588ec4369c882de3510036cd0a20ac2467d54593ef83
 DIST vmware-libcrypto.so.0.9.7l.tar.bz2 412159 RMD160 89282ae9fc6e8921a47704bc9cd23cf70a6870e8 SHA1 f86c4cb076fe1764975e9243dc0fae763f2b589a SHA256 fae52acf61415959cca763a715a2b61ec49f161a416d418d6a1faffce531db12
 DIST vmware-libssl.so.0.9.7l.tar.bz2 78244 RMD160 195dd4808e60f81621e6ed12b843ded49c0fa747 SHA1 5fe729a1e49e77afd83b408845833174e1296e39 SHA256 3e1e13196066dc5b77d3ef6b5df55a29156eba1f39661e40cd617b538220d089
 EBUILD vmware-server-console-1.0.1.29996-r4.ebuild 2485 RMD160 04779746a6efc91478a64755fdbe9da9400e11fe SHA1 d0a12b3dcbaddb207b9b3566708ffe2ebb9e694e SHA256 095fccf0f16acc8193c57a113c3d734a192b1192730b470c0d12047435922c90
@@ -18,6 +19,10 @@ EBUILD vmware-server-console-1.0.2.39867.ebuild 2485 RMD160 04779746a6efc91478a6
 MD5 7b1c07e0852902e20d7d9add77b28349 vmware-server-console-1.0.2.39867.ebuild 2485
 RMD160 04779746a6efc91478a64755fdbe9da9400e11fe vmware-server-console-1.0.2.39867.ebuild 2485
 SHA256 095fccf0f16acc8193c57a113c3d734a192b1192730b470c0d12047435922c90 vmware-server-console-1.0.2.39867.ebuild 2485
+EBUILD vmware-server-console-1.0.3.44356.ebuild 2485 RMD160 04779746a6efc91478a64755fdbe9da9400e11fe SHA1 d0a12b3dcbaddb207b9b3566708ffe2ebb9e694e SHA256 095fccf0f16acc8193c57a113c3d734a192b1192730b470c0d12047435922c90
+MD5 7b1c07e0852902e20d7d9add77b28349 vmware-server-console-1.0.3.44356.ebuild 2485
+RMD160 04779746a6efc91478a64755fdbe9da9400e11fe vmware-server-console-1.0.3.44356.ebuild 2485
+SHA256 095fccf0f16acc8193c57a113c3d734a192b1192730b470c0d12047435922c90 vmware-server-console-1.0.3.44356.ebuild 2485
 MISC metadata.xml 159 RMD160 fc7f68a382390e5916b0fb43f37a893fad4f9798 SHA1 f46b02a39bcd0165558de67ff4256cfc812418a3 SHA256 8581ae1c90a48f50fa0542c7fb28cb8984baaf12f50fa18f33e467081effb215
 MD5 7cc95faad4185e8ed375248bc73a17fc metadata.xml 159
 RMD160 fc7f68a382390e5916b0fb43f37a893fad4f9798 metadata.xml 159
@@ -28,3 +33,6 @@ SHA256 642765b50cc9b37f0121e94ce8380511d43f955adf954bbe40af78fe953a4246 files/di
 MD5 5e9b32cd260af6851315b6d8b5fc50ec files/digest-vmware-server-console-1.0.2.39867 867
 RMD160 1b0440a8ce8ce3332cd48f24e3c52c2122255261 files/digest-vmware-server-console-1.0.2.39867 867
 SHA256 7a90de65f65392848e9ef631c29c66ae63ee7a2c4ef0b760cf308390f6b97754 files/digest-vmware-server-console-1.0.2.39867 867
+MD5 6238f54e29240562414625e959d53cf2 files/digest-vmware-server-console-1.0.3.44356 867
+RMD160 e93f1bf930cc4ba9df4747c807f410c034a7f569 files/digest-vmware-server-console-1.0.3.44356 867
+SHA256 0430535b1ba197953f965856648a78163e372b0d05d7d0f1cf6f89996530a7e3 files/digest-vmware-server-console-1.0.3.44356 867
