@@ -1,0 +1,9 @@
+MD5 fc1852b47a0a650ca9466138c9a066bd VMware-server-linux-client-1.0.3-44356.zip 23355388
+RMD160 fed5884dc14c565ad9fb5bd089c951ea9adea79d VMware-server-linux-client-1.0.3-44356.zip 23355388
+SHA256 613912cea96209654dfd588ec4369c882de3510036cd0a20ac2467d54593ef83 VMware-server-linux-client-1.0.3-44356.zip 23355388
+MD5 062f83a22822b6e4d4a176e3648c38d8 vmware-libcrypto.so.0.9.7l.tar.bz2 412159
+RMD160 89282ae9fc6e8921a47704bc9cd23cf70a6870e8 vmware-libcrypto.so.0.9.7l.tar.bz2 412159
+SHA256 fae52acf61415959cca763a715a2b61ec49f161a416d418d6a1faffce531db12 vmware-libcrypto.so.0.9.7l.tar.bz2 412159
+MD5 913acecb0f79113de958e6a70618be7f vmware-libssl.so.0.9.7l.tar.bz2 78244
+RMD160 195dd4808e60f81621e6ed12b843ded49c0fa747 vmware-libssl.so.0.9.7l.tar.bz2 78244
+SHA256 3e1e13196066dc5b77d3ef6b5df55a29156eba1f39661e40cd617b538220d089 vmware-libssl.so.0.9.7l.tar.bz2 78244
